# valkyrie

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO  debug_clangd.cpp  main.cpp  vk_features.h  vk_object.cpp  vk_object.h  vk_pp.h  vk_util.h
include/: valkyrie.hpp
include/argent/: agent.h  core.h  deputy.h  mailbox.h  message.h  quartz.h  receiver.h  sender.h
include/argent/mailbox/: cmscmr.h  cmsmr.h  cmssr.h  mscmr.h  msmr.h  mssr.h  sscmr.h  ssmr.h  sssr.h
include/json/: allocator.h  async.h  context.h  core.h  document.h  file.h  json.h  parser.h  stream.h  string.h  task.h  validation.h  value.h  writer.h
include/spirv/: Compiler.hpp  Enums.hpp  Reflect.hpp  Shader.hpp  SpirV.hpp  enums.hpp
include/valkyrie/: Core.hpp  Graphics.hpp  constants.hpp  extended_primitives.hpp  meta.hpp  policies.hpp  preprocessor.hpp  primitives.hpp  resource.hpp  traits.hpp
include/valkyrie/Core/: Config.hpp  ExtendedNumericTypes.hpp  Meta.hpp  Policies.hpp  Resource.hpp  Traits.hpp  Types.hpp
include/valkyrie/GUI/: Monitor.hpp  Window.hpp
include/valkyrie/Graphics/: Image.hpp  Mesh.hpp  Pixel.hpp  Shaders.hpp  Shapes.hpp  Texel.hpp  Texture.hpp  Vertex.hpp
include/valkyrie/adt/: array_ref.hpp  arrays.hpp  colony.hpp  concurrent_list.hpp  dictionary.hpp  directed_graph.hpp  flat_map.hpp  flat_set.hpp  function_ref.hpp  handle.hpp  hazard_ptr.hpp  interval.hpp  interval_map.hpp  interval_set.hpp  intrusive_list.hpp  iterator.hpp  list.hpp  locked_ptr.hpp  nothing.hpp  object_pool.hpp  pointer_int_pair.hpp  ptr.hpp  range_ref.hpp  rb_tree.hpp  simd.hpp  small_array.hpp  small_string.hpp  small_vector.hpp  stack.hpp  static_array.hpp  static_vector.hpp  string.hpp  string_view.hpp  symbol.hpp  tags.hpp  temp_array.hpp  trie.hpp  twine.hpp
include/valkyrie/agent/: agency.hpp  agent.hpp  backend.hpp  channel.hpp  command.hpp  entity.hpp  event_loop.hpp  local_agent.hpp  mailbox.hpp  message.hpp  private_agent.hpp  receiver.hpp  registry.hpp  sender.hpp  shared_agent.hpp
include/valkyrie/async/: agent.hpp  atomic.hpp  barrier.hpp  latch.hpp  mutex.hpp  semaphore.hpp  shared_resource.hpp  task.hpp
include/valkyrie/graphics/: image.hpp  mesh.hpp  pixel.hpp  shader.hpp  texel.hpp  texture.hpp  vertex.hpp
include/valkyrie/gui/: monitor.hpp  window.hpp
include/valkyrie/memory/: address.hpp  aligned_allocator.hpp  allocator.hpp  allocator_storage.hpp  allocator_traits.hpp  container.hpp  debugging.hpp  default_allocator.hpp  deleter.hpp  distributed_allocator.hpp  error.hpp  fallback_allocator.hpp  handle.hpp  heap_allocator.hpp  iteration_allocator.hpp  joint_allocator.hpp  literals.hpp  malloc.hpp  malloc_allocator.hpp  manager.hpp  memory_arena.hpp  memory_pool.hpp  memory_pool_collection.hpp  memory_pool_type.hpp  memory_resource.hpp  memory_resource_adaptor.hpp  memory_stack.hpp  new_allocator.hpp  new_delete.hpp  segregator.hpp  small_object_allocator.hpp  smart_ptr.hpp  static_allocator.hpp  std_allocator.hpp  temporary_allocator.hpp  threading.hpp  tracking.hpp  virtual_memory.hpp
include/valkyrie/status/: assert.hpp  generic_code.hpp  indirect_domain.hpp  maybe.hpp  outcome.hpp  result.hpp  severity.hpp  stacktrace.hpp  status_code.hpp  status_domain.hpp  status_enum_domain.hpp
include/valkyrie/utility/: align.hpp  bitflag.hpp  casting.hpp  components.hpp  cpu.hpp  enums.hpp  filesystem.hpp  function_ref.hpp  hash.hpp  interval.hpp  iterator.hpp  json.hpp  library.hpp  ordering.hpp  pow2.hpp  random.hpp  range_ref.hpp  read_stream.hpp  ref_counted.hpp  reflect.hpp  shapes.hpp  simd.hpp  span.hpp  time.hpp  timer.hpp  uuid.hpp  version.hpp  waymarking.hpp  write_stream.hpp
src/: dummy.cpp  example.cpp  valkyrie.cpp
src/argent/: agent.c  atomic.h  internal.h  mailbox.c  mailbox_common.h  message.c  mm.c  mm.h  receiver.c  semaphore.h  sender.c  timing.h
src/argent/mailbox/: cmscmr.c  cmsmr.c  cmssr.c  mscmr.c  msmr.c  mssr.c  sscmr.c  ssmr.c  sssr.c
src/argent/quartz/: entry_point.c  init.c  internal.h  mailbox.c  shmem.c
src/json/: internal.h  internal_fwd.h  json.c  json_interval_tree.cpp  jsonasync.h  jsonbitmap.c  jsonbitmap.h  jsonctx.c  jsonctx.h  jsondefs.h  jsonmm.c  jsonmm.h  jsonmm_types.h  jsonnumber.h  jsonparser.c  jsonparser.h  jsonstring.c  jsonstring.h  jsontables.h  jsontypes.h  jsonvalue.c  jsonvalue.h  jsonvmm.c  jsonvmm.cc  jsonvmm.h  mimalloc.h
src/spirv/: Shader.cpp  SpirV.cpp
src/valkyrie/: DynamicLoader.hpp  common.h  dynamic_loader.hpp  error.cpp  graphics.cpp  memory.cpp  system_error.cpp  utility.cpp  valkyrie.cpp  win32_functions.cpp  win32_functions.hpp
src/valkyrie/Core/: DynamicLoader.hpp  Error.cpp  SystemError.cpp  Utility.cpp  Win32Functions.cpp  Win32Functions.hpp
src/valkyrie/GUI/: DXGI.cpp  DXGI.hpp  InternalStructures.hpp  Monitor.cpp  Window.cpp
src/valkyrie/adt/: concurrent_list.cpp  dictionary.cpp  hazard_ptr.cpp  rb_tree.cpp  small_vector.cpp  symbol.cpp  twine.cpp
src/valkyrie/agent/: agent.cpp  backend.cpp  channel.cpp  local_agent.cpp  mailbox.cpp  message.cpp  private_agent.cpp  receiver.cpp  registry.cpp  sender.cpp  shared_agent.cpp
src/valkyrie/async/: agent.cpp  semaphore.cpp  task.cpp
src/valkyrie/gui/: dxgi.cpp  dxgi.hpp  internal_structures.hpp  monitor.cpp  window.cpp
src/valkyrie/memory/: debugging.cpp  error.cpp  heap_allocator.cpp  iteration_allocator.cpp  malloc_allocator.cpp  manager.cpp  memory_arena.cpp  memory_pool.cpp  memory_pool_collection.cpp  memory_stack.cpp  new_allocator.cpp  static_allocator.cpp  temporary_allocator.cpp  virtual_memory.cpp
src/valkyrie/status/: error.cpp  system.cpp
src/valkyrie/utility/: components.cpp  cpu.cpp  demangle.cpp  json.cpp  library.cpp  random.cpp  reflect.cpp  simd.cpp  simdjson.cpp  simdjson.hpp  uuid.cpp
test/: CudaGraph.cpp  DirectedGraph.cpp  Mailbox.cpp  VirtualFuncPtr.cpp  api_test.cpp  better_tictactoe.c  directed_graph.cpp  graph_gui.cpp  internal_json.c  intrin.cpp  print_modules.cpp  tictactoe.c  valkyrie.cpp  windowsapi.cpp
test/json/: json.c
test/json/samples/: CMakeLists.txt
test/valkyrie/: Memory.cpp
(+282 files in other folders)
